# flask-message-manager

./: .env  .gitignore  README.md  main.py  pyproject.toml  run.py  test.py
app/: __init__.py  config.py
app/admin/: routes.py
app/api/: __init__.py  cleanup.py  config.py  machines.py  server.py  system_config.py  urls.py  users.py
app/auth/: decorators.py  routes.py
app/main/: routes.py
app/models/: __init__.py  cleanup_task.py  config_data.py  system_config.py  url_data.py  user.py
app/services/: __init__.py  cleanup_scheduler.py
app/static/css/: admin.css  common.css  dashboard.css  styles.css
app/static/js/: admin.js  common.js  dashboard.js  notification.js
app/templates/: admin.html  dashboard.html  login.html
app/utils/: auth.py  dynamic_config.py  vmos.py
database/: cleanup_tasks.sql  data.sql  migrate.sql  staus.sql  system_configs.sql  test.sql  user.sql
